tests/error/tracing_errors/bad_arg@python313.err
Traceback (most recent call last):
  File "$FILE", line 16, in <module>
    module.compile()
    ~~~~~~~~~~~~~~^^
  File "$FILE", line 13, in test
    foo(1.0)
    ~~~^^^^^
TypeError: Type mismatch: Expected argument of type `int`, got `float`
